@@ -1,3 +1,5 @@
+2005/12/31 -- released version 20051231_trunk
+
 2005/12/30 -- released version 20051230_trunk
 
 2005/12/29 -- released version 20051229_trunk
